--- a/static/table/css/main.css
+++ b/static/table/css/main.css
@@ -1,21 +1,24 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
 table {
-  border: 1px solid #ccc;
+  border: 3px solid #ccc;
   border-collapse: collapse;
-  margin:0;
-  padding:0;
+  margin:5px;
+  padding:5px;
   width: 100%;
 }
 table tr {
-  border: 1px solid #ddd;
+  border: 3px solid #ddd;
   padding: 5px;
 }
 table th, table td {
+
   padding: 10px;
   text-align: center;
 }
 table th {
+
+
   font-size: 14px;
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -28,7 +31,7 @@ table th {
     display: none;
   }
   table tr {
-    border-bottom: 2px solid #ddd;
+    border-bottom: 1px solid #ddd;
     display: block;
     margin-bottom: 10px;
   }
@@ -49,6 +52,4 @@ table th {
   }
 }
 
-table .backcolor {
-  background-color: #1d809f;
-}
+
