--- a/templates/table_employee.html
+++ b/templates/table_employee.html
@@ -11,7 +11,7 @@
   <thead>
     <tr style="background-color: #007bff">
       <th>ИМЯ/ФАМИЛИЯ</th>
-      <th>ДАТА</th>
+      <th>АДРЕС</th>
       <th>ДАТА_ОБНОВЛЕНИЯ</th>
       <th>ЗАРПЛАТА</th>
     </tr>
