--- a/templates/table_transaction.html
+++ b/templates/table_transaction.html
@@ -4,7 +4,6 @@
 {% block content %}
 
 
-
 <link rel="stylesheet" href="{% static 'table/css/main.css' %}">
 <table>
   <thead>
@@ -20,8 +19,8 @@
   <tbody>
   {% for i in transactions %}
     <tr>
-      <td data-label="ДАТА_ПУБЛИКАЦИИ">{{ i.date_pub|date:'d/m/Y' }}</td>
-      <td data-label="ДАТА_ОБНОВЛЕНИЯ">{{ i.date_up|date:'d/m/Y' }}</td>
+      <td data-label="ДАТА_ПУБЛИКАЦИИ">{{ i.created_date|date:'d/m/Y' }}</td>
+      <td data-label="ДАТА_ОБНОВЛЕНИЯ">{{ i.update_date|date:'d/m/Y' }}</td>
       <td data-label="ПРИХОД">{{ i.incoming }}</td>
       <td data-label="РАСХОД">{{ i.expense }}</td>
       <td data-label="НАЗНАЧЕНИЕ">{{ i.description }}</td>
@@ -57,6 +56,7 @@
         {% endif %}
     </span>
 </div>
+
 
 
 {% endblock %}
