--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,8 @@
     <div class="container text-center my-auto">
       <h1 class="mb-1">DocBiz-Enterprise</h1>
       <h3 class="mb-5">
-        <em></em>
+        <em>Если вы проснулись утром с мыслями о том, что в будущем всё будет значительно лучше, то это хороший день. В противном случае, это не так.</em><br>
+          <strong>Илон Маск</strong>
       </h3>
 
     </div>
