--- a/templates/add_trans.html
+++ b/templates/add_trans.html
@@ -16,22 +16,22 @@
     <form method="POST"> {% csrf_token %}
   <div class="form-group">
     <label for="created_date"><h5>ДАТА</h5></label>
-    <input type="date" class="form-control" id="date" name="created_date" >
+    <input type="date" class="form-control" id="date" name="created_date" required>
   </div>
 
   <div class="form-group">
     <label for="incoming"><h5>ПРИХОД</h5></label>
-    <input type="number" class="form-control" id="incoming" value="0" name="incoming">
+    <input type="number" class="form-control" id="incoming" value="0" name="incoming" required>
   </div>
 
     <div class="form-group">
     <label for="expense"><h5>РАСХОД</h5></label>
-    <input type="number" class="form-control" id="expense" value="0" name="expense">
+    <input type="number" class="form-control" id="expense" value="0" name="expense" required>
   </div>
 
     <div class="form-group">
     <label for="description"><h5>НАЗНАЧЕНИЕ</h5></label>
-    <input type="text" class="form-control" id="description" name="description">
+    <input type="text" class="form-control" id="description" name="description" required>
   </div>
 
   <button type="submit" class="btn btn-primary">ПОДТВЕРДИТЬ</button>
