--- a/templates/table_transaction.html
+++ b/templates/table_transaction.html
@@ -5,36 +5,56 @@
 
 
 <link rel="stylesheet" href="{% static 'table/css/main.css' %}">
-    <a href="{% url 'add_transaction' %}"><button type="button" class="btn btn-primary btn-lg btn-block" style="background-color: #007bff !important; ">Add Transaction</button></a>
+<div class="alert alert-primary" role="alert" style="text-align: center">
+  <h3>ТРАНЗАКЦИИ</h3>
+</div>
+    <a href="{% url 'add_transaction' %}"><button type="button" class="btn btn-primary btn-lg" style="display: table;
+      margin-right: auto;
+      margin-left: auto;
+      text-align: center;
+      width: 250px;
+      height: 50px">Добавит Транзакцию</button></a>
+
+<div>
     <table>
-  <thead>
-    <tr style="background-color: #007bff">
-      <th>ДАТА</th>
-      <th>ПРИХОД</th>
-      <th>РАСХОД</th>
-      <th>НАЗНАЧЕНИЕ</th>
-      <th>БАЛАНС</th>
-    </tr>
-  </thead>
-  <tbody>
-  {% for i in transactions %}
-    <tr>
-      <td data-label="ДАТА">{{ i.created_date|date:'d/m/Y' }}</td>
-      <td data-label="ПРИХОД">{{ i.incoming }}</td>
-      <td data-label="РАСХОД">{{ i.expense }}</td>
-      <td data-label="НАЗНАЧЕНИЕ">{{ i.description }}</td>
-      <td data-label="БАЛАНС">{{ i.balance }}</td>
-    </tr>
-  {% endfor %}
-    <tr>
-        <th><h4>ИТОГ</h4></th>
-        <td  data-label="ПРИХОД"><h6>{{ sum_incoming }}</h6></td>
-        <td  data-label="РАСХОД"><h6>{{ sum_expense }}</h6></td>
-        <td></td>
-        <td data-label="БАЛАНС"><h6>{{ balance }}</h6></td>
-    </tr>
-  </tbody>
-</table>
+      <thead>
+        <tr style="background-color: #007bff">
+          <th>ДАТА</th>
+          <th>ПРИХОД</th>
+          <th>РАСХОД</th>
+          <th>НАЗНАЧЕНИЕ</th>
+          <th>БАЛАНС</th>
+        </tr>
+      </thead>
+      <tbody>
+      {% for i in transactions %}
+        <tr>
+          <td data-label="ДАТА">{{ i.created_date }}</td>
+          <td data-label="ПРИХОД">{{ i.incoming }}</td>
+          <td data-label="РАСХОД">{{ i.expense }}</td>
+          <td data-label="НАЗНАЧЕНИЕ">{{ i.description }}</td>
+          <td data-label="БАЛАНС">{{ i.balance }}</td>
+        </tr>
+      {% endfor %}
+        <tr>
+            <th><h4>ИТОГ</h4></th>
+            <td  data-label="ПРИХОД"><h6>{{ sum_incoming }}</h6></td>
+            <td  data-label="РАСХОД"><h6>{{ sum_expense }}</h6></td>
+            <td></td>
+            <td data-label="БАЛАНС"><h6>{{ balance }}</h6></td>
+        </tr>
+      </tbody>
+    </table>
+</div>
+
+
+  <button onclick="download();" class="btn btn-primary" style="display: table;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  width: 150px;
+  height: 50px"><h4>Скачать</h4></button>
+
 
 <div class="pagination" style="display: flex;justify-content: center;">
     <span class="step-links">
