--- a/templates/table_clients.html
+++ b/templates/table_clients.html
@@ -54,25 +54,25 @@
   height: 50px"><h4>Скачать</h4></button>
 
 
-{#<div class="pagination" style="display: flex;justify-content: center;">#}
-{#    <span class="step-links">#}
-{#        {% if transactions.has_previous %}#}
-{#            <button><a href="?page=1">&laquo; ПЕРВ.</a></button>#}
-{#            <button><a href="?page={{ transactions.previous_page_number }}">ПРЕД.</a></button>#}
-{#        {% endif %}#}
-{##}
-{#                <span class="current">#}
-{#             {{ transactions.number }} ИЗ {{ transactions.paginator.num_pages }}#}
-{#        </span>#}
-{##}
-{##}
-{##}
-{#        {% if transactions.has_next %}#}
-{#            <button><a href="?page={{ transactions.next_page_number }}">СЛЕД.</a></button>#}
-{#            <button><a href="?page={{ transactions.paginator.num_pages }}">ПОСЛ. &raquo;</a></button>#}
-{#        {% endif %}#}
-{#    </span>#}
-{#</div>#}
+<div class="pagination" style="display: flex;justify-content: center;">
+    <span class="step-links">
+        {% if transactions.has_previous %}
+            <button><a href="?page=1">&laquo; ПЕРВ.</a></button>
+            <button><a href="?page={{ transactions.previous_page_number }}">ПРЕД.</a></button>
+        {% endif %}
+
+                <span class="current">
+             {{ transactions.number }} ИЗ {{ transactions.paginator.num_pages }}
+        </span>
+
+
+
+        {% if transactions.has_next %}
+            <button><a href="?page={{ transactions.next_page_number }}">СЛЕД.</a></button>
+            <button><a href="?page={{ transactions.paginator.num_pages }}">ПОСЛ. &raquo;</a></button>
+        {% endif %}
+   </span>
+</div>
 
 
 
