--- a/templates/table_cashbox.html
+++ b/templates/table_cashbox.html
@@ -84,11 +84,14 @@
   </span>
 </div>
 
-<button onclick="download();" class="btn btn-primary" style="display: table;
+<div>
+  <button onclick="download();" class="btn btn-primary" style="display: table;
   margin-right: auto;
   margin-left: auto;
   text-align: center;
   width: 150px;
   height: 50px"><h4>Сачать</h4></button>
+
+</div>
 
 {% endblock %}
