--- a/templates/table_clients.html
+++ b/templates/table_clients.html
@@ -46,12 +46,6 @@
 </table>
 
 
-  <button onclick="download();"  class="btn btn-primary" style="display: table;
-  margin-right: auto;
-  margin-left: auto;
-  text-align: center;
-  width: 150px;
-  height: 50px"><h4>Скачать</h4></button>
 
 
 <div class="pagination" style="display: flex;justify-content: center;">
@@ -74,6 +68,16 @@
    </span>
 </div>
 
+
+<div>
+  <button onclick="download();"  class="btn btn-primary" style="display: table;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  width: 150px;
+  height: 50px"><h4>Скачать</h4></button>
+  
+</div>
 
 
 {% endblock %}
