--- a/templates/table_terminal.html
+++ b/templates/table_terminal.html
@@ -73,12 +73,16 @@
 {#    </span>#}
 {#</div>#}
 
-<button onclick="download();" class="btn btn-primary" style="display: table;
+<div>
+  <button onclick="download();" class="btn btn-primary" style="display: table;
   margin-right: auto;
   margin-left: auto;
   text-align: center;
   width: 150px;
   height: 50px"><h4>Скачать</h4></button>
+
+</div>
+
 
 
 {% endblock %}
