--- a/templates/table_clients.html
+++ b/templates/table_clients.html
@@ -69,14 +69,13 @@
 </div>
 
 
-<div>
-  <button onclick="download();"  class="btn btn-primary" style="display: table;
-  margin-right: auto;
-  margin-left: auto;
-  text-align: center;
-  width: 150px;
-  height: 50px"><h4>Скачать</h4></button>
-  
+<div style="display: table;
+margin-right: auto;
+margin-left: auto;
+text-align: center;
+width: 150px;
+height: 50px">
+  <button onclick="download();"  class="btn btn-primary" ><h4>Скачать</h4></button>
 </div>
 
 
