--- a/templates/table_cashbox.html
+++ b/templates/table_cashbox.html
@@ -85,7 +85,7 @@
 </div>
 
 
-  <button onclick="download();" class="btn btn-primary" ><h4>Сачать</h4></button>
+  <button onclick="download();" class="btn btn-success"><h4>Сачать</h4></button>
 
 
 
