--- a/templates/table_clients.html
+++ b/templates/table_clients.html
@@ -50,27 +50,27 @@
 
 <div class="pagination" style="display: flex;justify-content: center;">
     <span class="step-links">
-        {% if transactions.has_previous %}
+        {% if clients.has_previous %}
             <button><a href="?page=1">&laquo; ПЕРВ.</a></button>
-            <button><a href="?page={{ transactions.previous_page_number }}">ПРЕД.</a></button>
+            <button><a href="?page={{ clients.previous_page_number }}">ПРЕД.</a></button>
         {% endif %}
 
                 <span class="current">
-             {{ transactions.number }} ИЗ {{ transactions.paginator.num_pages }}
+             {{ clients.number }} ИЗ {{ clients.paginator.num_pages }}
         </span>
 
 
 
-        {% if transactions.has_next %}
-            <button><a href="?page={{ transactions.next_page_number }}">СЛЕД.</a></button>
-            <button><a href="?page={{ transactions.paginator.num_pages }}">ПОСЛ. &raquo;</a></button>
+        {% if clients.has_next %}
+            <button><a href="?page={{ clients.next_page_number }}">СЛЕД.</a></button>
+            <button><a href="?page={{ clients.paginator.num_pages }}">ПОСЛ. &raquo;</a></button>
         {% endif %}
    </span>
 </div>
 
 
 
-  <button onclick="download();"  class="btn btn-primary" ><h4>Скачать</h4></button>
+  <button onclick="download();"  class="btn btn-success"><h4>Скачать</h4></button>
 
 
 
