--- a/templates/table_transaction.html
+++ b/templates/table_transaction.html
@@ -3,18 +3,29 @@
 {% load widget_tweaks %}
 {% block content %}
 
+    <script type="text/javascript" src="http://oss.sheetjs.com/js-xlsx/xlsx.core.min.js" ></script>
+    <script type="text/javascript" src="http://oss.sheetjs.com/js-xlsx/ods.min.js"></script>
+    <script type="text/javascript" src="http://sheetjs.com/demos/Blob.js"></script>
+    <script type="text/javascript" src="http://sheetjs.com/demos/FileSaver.js"></script>
+    <script type="text/javascript" src="http://sheetjs.com/demos/Export2Excel.js"></script>
+    <script>
+        function download() { export_table_to_excel('myTable', 'xlsx' || 'xlsx'); }
+    </script>
 
 <link rel="stylesheet" href="{% static 'table/css/main.css' %}">
 <div class="alert alert-primary" role="alert" style="text-align: center">
   <h3>ТРАНЗАКЦИИ</h3>
 </div>
-    <a href="{% url 'add_transaction' %}"><button type="button" class="btn btn-primary btn-lg" style="display: table;
-      margin-right: auto;
-      margin-left: auto;
-      text-align: center;
-      width: 250px;
-      height: 50px">Добавит Транзакцию</button></a>
+<div>
+  <a href="{% url 'add_transaction' %}"><button type="button" class="btn btn-primary btn-lg" style="display: table;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    width: 250px;
+    height: 50px">Добавит Транзакцию</button></a>
 
+</div>
+    
 <div>
     <table>
       <thead>
@@ -72,7 +83,7 @@
 </div>
 
 
-  <button onclick="download();" class="btn btn-primary" ><h4>Скачать</h4></button>
+  <button onclick="download();" class="btn btn-success" ><h4>Скачать</h4></button>
 
 
 
