--- a/templates/update_transaction_form.html
+++ b/templates/update_transaction_form.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="alert alert-primary" role="alert" style="text-align: center">
-  <h3>Добавить Транзакцию</h3>
+  <h3>Редактировать Транзакцию</h3>
 </div>
 <div style="display: table;
             margin-right: auto;
@@ -13,7 +13,7 @@
             width: 450px;
             height: 450px">
 
-    <form method="POST" action="/update/{{ transaction.id }}"> {% csrf_token %}
+    <form method="POST"> {% csrf_token %}
  
   <div class="form-group" >
     <label for="created_date"><h5>ДАТА</h5></label>
@@ -35,7 +35,10 @@
     <input type="text" class="form-control" id="description" name="description" value="{{ transaction.description }}" required>
   </div>
   
-  <button type="submit" class="btn btn-primary">ПОДТВЕРДИТЬ</button>
+  <button type="submit" class="btn btn-primary" style="width: 200px;
+  height: 50px">ПОДТВЕРДИТЬ</button>
+  <a href="{% url 'table_trans' %}"><button type="button" class="btn btn-danger" style="width: 200px;
+    height: 50px">ОТМЕНИТЬ</button></a>
 </form>
 </div>
 
