--- a/templates/table_transaction.html
+++ b/templates/table_transaction.html
@@ -22,9 +22,10 @@
     margin-left: auto;
     text-align: center;
     width: 250px;
-    height: 50px">Добавит Транзакцию</button></a>
+    height: 50px">Добавить Транзакцию</button></a>
 
 </div>
+
     
 <div>
     <table>
