--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load widget_tweaks %}
+{% load bootstrap %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -48,11 +49,6 @@
   <header class="masthead d-flex">
     <div class="container text-center my-auto">
       <h1 class="mb-1">DocBiz-Enterprise</h1>
-      <h3 class="mb-5">
-        <em>Если вы проснулись утром с мыслями о том, что в будущем всё будет значительно лучше, то это хороший день. В противном случае, это не так.</em><br>
-          <strong>Илон Маск</strong>
-      </h3>
-
     </div>
     <div class="overlay"></div>
   </header>
