--- a/templates/table_clients.html
+++ b/templates/table_clients.html
@@ -17,6 +17,36 @@
 <div class="alert alert-primary" role="alert" style="text-align: center">
   <h3>КЛИЕНТЫ</h3>
 </div>
+
+<div style="margin-bottom:1em;">
+    <form class="form-inline" method="GET">
+    
+        <div class="form-group">
+          <input name="start_date"  type="text" class="form-control" placeholder="Дата начальная" onfocus="(this.type='date')"/>
+        </div>
+        
+        <div class="form-group" >
+          <input name="end_date"  type="text" class="form-control" placeholder="Дата конечная" onfocus="(this.type='date')" />
+        </div>
+
+        <div class="form-group">
+          <input type="text" class="form-control" name="city" placeholder="Город">
+        </div>
+
+        <div class="form-group">
+          <input type="text" class="form-control" name="address" placeholder="Адрес">
+        </div>
+        
+        <div class="form-group">
+          <input type="text" class="form-control" name="type_of_activity" placeholder="Вид деятельности">
+        </div>
+
+        <button type="submit" class="btn btn-primary">Фильтр</button>
+      </form>      
+</div>
+
+
+
 <table id="myTable">
   <thead>
     <tr style="background-color: #007bff">
@@ -30,22 +60,70 @@
     </tr>
   </thead>
   <tbody>
-  {% for cl in clients %}
-    <tr>
-      <td data-label="ДАТА">{{ cl.created_date|date:'d.m.Y' }}</td>
-      <td data-label="ГОРОД">{{ cl.city }}</td>
-      <td data-label="АДРЕС">{{ cl.address }}</td>
-      <td data-label="ВИД ДЕЯТЕЛЬНОСТИ">{{ cl.type_of_activity }}</td>
-      <td data-label="ОПЛАТА">{{ cl.payment }}</td>
-      <td data-label="КАССА"><a href="{% url 'cashboxes_detail' cl.id %}">КАССА</a></td>
-      <td data-label="ТЕРМИНАЛ"><a href="{% url 'terminals_detail' cl.id %}">ТЕРМИНАЛ</a></td>
-    </tr>
-  {% endfor %}
+  {% if queryset %}
+      {% for c in queryset %}
+      <tr>
+        <td data-label="ДАТА">{{ c.created_date|date:'d.m.Y' }}</td>
+        <td data-label="ГОРОД">{{ c.city }}</td>
+        <td data-label="АДРЕС">{{ c.address }}</td>
+        <td data-label="ВИД ДЕЯТЕЛЬНОСТИ">{{ c.type_of_activity }}</td>
+        <td data-label="ОПЛАТА">{{ c.payment }}</td>
+        <td data-label="КАССА"><a href="{% url 'cashboxes_detail' c.id %}">КАССА</a></td>
+        <td data-label="ТЕРМИНАЛ"><a href="{% url 'terminals_detail' c.id %}">ТЕРМИНАЛ</a></td>
+      </tr>
+      {% endfor %}
 
+  {% elif queryset_1 %}
+      {% for c in queryset_1 %}
+
+        <tr>
+        <td data-label="ДАТА">{{ c.created_date|date:'d.m.Y' }}</td>
+        <td data-label="ГОРОД">{{ c.city }}</td>
+        <td data-label="АДРЕС">{{ c.address }}</td>
+        <td data-label="ВИД ДЕЯТЕЛЬНОСТИ">{{ c.type_of_activity }}</td>
+        <td data-label="ОПЛАТА">{{ c.payment }}</td>
+        <td data-label="КАССА"><a href="{% url 'cashboxes_detail' c.id %}">КАССА</a></td>
+        <td data-label="ТЕРМИНАЛ"><a href="{% url 'terminals_detail' c.id %}">ТЕРМИНАЛ</a></td>
+        </tr>
+
+      {% endfor %}
+  
+  {% elif queryset_2 %}
+      {% for c in queryset_2 %}
+
+        <tr>
+        <td data-label="ДАТА">{{ c.created_date|date:'d.m.Y' }}</td>
+        <td data-label="ГОРОД">{{ c.city }}</td>
+        <td data-label="АДРЕС">{{ c.address }}</td>
+        <td data-label="ВИД ДЕЯТЕЛЬНОСТИ">{{ c.type_of_activity }}</td>
+        <td data-label="ОПЛАТА">{{ c.payment }}</td>
+        <td data-label="КАССА"><a href="{% url 'cashboxes_detail' c.id %}">КАССА</a></td>
+        <td data-label="ТЕРМИНАЛ"><a href="{% url 'terminals_detail' c.id %}">ТЕРМИНАЛ</a></td>
+      </tr>
+
+
+      {% endfor %}
+
+  {% else %}
+      {% for cl in clients %}
+
+        <tr>
+          <td data-label="ДАТА">{{ cl.created_date|date:'d.m.Y' }}</td>
+          <td data-label="ГОРОД">{{ cl.city }}</td>
+          <td data-label="АДРЕС">{{ cl.address }}</td>
+          <td data-label="ВИД ДЕЯТЕЛЬНОСТИ">{{ cl.type_of_activity }}</td>
+          <td data-label="ОПЛАТА">{{ cl.payment }}</td>
+          <td data-label="КАССА"><a href="{% url 'cashboxes_detail' cl.id %}">КАССА</a></td>
+          <td data-label="ТЕРМИНАЛ"><a href="{% url 'terminals_detail' cl.id %}">ТЕРМИНАЛ</a></td>
+        </tr>
+
+      {% endfor %}
+
+
+  {% endif %}
+  
   </tbody>
 </table>
-
-
 
 
 <div class="pagination" style="display: flex;justify-content: center;">
