--- a/templates/table_transaction.html
+++ b/templates/table_transaction.html
@@ -64,7 +64,7 @@
 
     
 <div>
-    <table  class="display">
+    <table  class="display" id="myTable">
       <thead>
         <tr style="background-color: #007bff">
           <th>ДАТА</th>
