--- a/templates/table_transaction.html
+++ b/templates/table_transaction.html
@@ -11,7 +11,14 @@
     <script type="text/javascript" src="http://sheetjs.com/demos/FileSaver.js"></script>
     <script type="text/javascript" src="http://sheetjs.com/demos/Export2Excel.js"></script>
     <script>
-        function download() { export_table_to_excel('myTable', 'xlsx' || 'xlsx'); }
+        $(document).ready(function() {
+            $('myTable').DataTable( {
+                     dom: 'Bfrtip',
+                     buttons: [
+                     'copy', 'csv', 'excel', 'pdf', 'print'
+                  ]
+            } );
+         } );
     </script>
 
 
@@ -223,7 +230,7 @@
 
 {% endif %}
 
-  <button onclick="download();" class="btn btn-success" ><h4>Скачать</h4></button>
+  <button onclick="document();" class="btn btn-success" ><h4>Скачать</h4></button>
 
   
 
