--- a/templates/table_transaction.html
+++ b/templates/table_transaction.html
@@ -11,14 +11,7 @@
     <script type="text/javascript" src="http://sheetjs.com/demos/FileSaver.js"></script>
     <script type="text/javascript" src="http://sheetjs.com/demos/Export2Excel.js"></script>
     <script>
-        $(document).ready(function() {
-            $('#example').DataTable( {
-                     dom: 'Bfrtip',
-                     buttons: [
-                     'copy', 'csv', 'excel', 'pdf', 'print'
-                  ]
-            } );
-         } );
+        function download() { export_table_to_excel('myTable', 'xlsx' || 'xlsx'); }
     </script>
 
 
@@ -67,15 +60,10 @@
     </div>
     
   
-<button class="dt-button buttons-copy buttons-html5" tabindex="0" aria-controls="example" type="button"><span>Copy</span></button>
-<button class="dt-button buttons-csv buttons-html5" tabindex="0" aria-controls="example" type="button"><span>CSV</span></button>
-<button class="dt-button buttons-excel buttons-html5" tabindex="0" aria-controls="example" type="button"><span>Excel</span></button> 
-<button class="dt-button buttons-pdf buttons-html5" tabindex="0" aria-controls="example" type="button"><span>PDF</span></button> 
-<button class="dt-button buttons-print" tabindex="0" aria-controls="example" type="button"><span>Print</span></button>
 
     
 <div>
-    <table  class="display" id="example">
+    <table  class="display" id="myTable">
       <thead>
         <tr style="background-color: #007bff">
           <th>ДАТА</th>
@@ -234,7 +222,7 @@
 
 {% endif %}
 
-  <button onclick="document();" class="btn btn-success" ><h4>Скачать</h4></button>
+  <button onclick="download();" class="btn btn-success" ><h4>Скачать</h4></button>
 
   
 
